--- a/w_report_projects/i18n/es_MX.po
+++ b/w_report_projects/i18n/es_MX.po
@@ -1,19 +1,21 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* w_report_projects
+# 	* w_report_projects
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0+e\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-28 20:48+0000\n"
-"PO-Revision-Date: 2019-05-28 20:48+0000\n"
+"PO-Revision-Date: 2022-08-03 10:39-0500\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
+"Language: es_MX\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"X-Generator: Poedit 3.1.1\n"
 
 #. module: w_report_projects
 #: model_terms:ir.ui.view,arch_db:w_report_projects.equipment_delivery_template
@@ -74,22 +76,14 @@ msgstr ""
 
 #. module: w_report_projects
 #: model_terms:ir.ui.view,arch_db:w_report_projects.w_reception_equipment_pricipa_template
-msgid "<strong>\n"
+msgid ""
+"<strong>\n"
 "                            <span>MANUAL DE ASEGURAMIENTO DE LA CALIDAD<br/><br/>\n"
 "                            Recepción, entrega y revisión de equipos.\n"
 "                            </span></strong>"
 msgstr ""
 
-#. module: w_report_projects
-#: model_terms:ir.ui.view,arch_db:w_report_projects.equipment_delivery_template
-msgid "<strong>\n"
-"                            <span>QUALITY ASSURANCE MANUAL<br/><br/>\n"
-"                            Reception, delivery and review of applications and contracts\n"
-"                            </span></strong>"
-msgstr "<strong>\n"
-"                            <span>MANUAL DE ASEGURAMIENTO DE LA CALIDAD<br/><br/>\n"
-"                            Recepción, entrega y revisión de solicitudes y contratos\n"
-"                            </span></strong>"
+
 
 #. module: w_report_projects
 #: model_terms:ir.ui.view,arch_db:w_report_projects.w_report_order_service
@@ -339,6 +333,11 @@ msgid "Date reception"
 msgstr "Fecha de recepción"
 
 #. module: w_report_projects
+#: model:ir.model.fields,field_description:w_report_projects.field_project_task__date_service_order
+msgid "Date service order"
+msgstr "Fecha orden de servicio"
+
+#. module: w_report_projects
 #: model_terms:ir.ui.view,arch_db:w_report_projects.w_reception_equipment_pricipa_template
 msgid "Datos para certificado"
 msgstr ""
@@ -353,10 +352,7 @@ msgstr ""
 msgid "Delivery by"
 msgstr "Entregado por:"
 
-#. module: w_report_projects
-#: model_terms:ir.ui.view,arch_db:w_report_projects.equipment_delivery_template
-msgid "Delivery of instruments, equipment and documents"
-msgstr "Entrega de instrumentos, equipos y documentos"
+
 
 #. module: w_report_projects
 #: model_terms:ir.ui.view,arch_db:w_report_projects.equipment_delivery_template
@@ -422,15 +418,9 @@ msgstr "Número de etiquetas"
 msgid "Número de puerta:"
 msgstr ""
 
-#. module: w_report_projects
-#: model_terms:ir.ui.view,arch_db:w_report_projects.w_reception_equipment_pricipa_template
-msgid "Observaciones:"
-msgstr ""
 
-#. module: w_report_projects
-#: model_terms:ir.ui.view,arch_db:w_report_projects.report_equipment_delivery
-msgid "Observations"
-msgstr "Observaciones:"
+
+
 
 #. module: w_report_projects
 #: model:ir.model.fields,help:w_report_projects.field_project_task__observations_report_equipment_reception
